fixed search bar width, way too short on mobile

--- a/src/Components/ArticleList/ArticleList.css
+++ b/src/Components/ArticleList/ArticleList.css
@@ -3,6 +3,12 @@
   width: 30%;
 }
 
+@media only screen and (max-width: 600px) {
+  .search-wrap {
+    width: 100%;
+  }
+}
+
 .search-bar {
   width: 100%;
   position: relative;
